# fizz

./: .gitignore  Cargo.toml  README.md  run.sh
src/: error.rs  main.rs
src/discord/: discord_data.rs  discord_error.rs  mod.rs
src/discord/commands/: away.rs  back.rs  help.rs  mod.rs  my_github_is.rs  my_report_times_are.rs  my_role_is_lead.rs  my_timezone_is.rs  my_workdays_are.rs  ping.rs  remove_me.rs  report_all.rs  setup.rs  wake.rs  whoami.rs  whois_everyone.rs
src/discord/tasks/: mod.rs  watch_github.rs
src/discord/util/: delete_messages.rs  mod.rs  update_config.rs
src/github/: issues.rs  mod.rs  prs.rs
src/model/: config.rs  conversions.rs  discord_user.rs  ids.rs  mod.rs
