# Part of the Carbon Language project, under the Apache License v2.0 with LLVM
# Exceptions. See /LICENSE for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[package]
name = "fizz"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
chrono-tz = { version = "0.10.4", features = ["case-insensitive", "serde"] }
octocrab = "0.45.0"
poise = "0.6.1"
serde = "1.0.226"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "signal"] }
toml = "0.9.7"
